# rs-function

./: COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.zh_CN.md  README.md  README.zh_CN.md  align-ci.sh  ci-check.sh  code-review.md  coverage.sh  rustfmt.toml  temp_debug_display.rs  test_box_conditional.rs  test_clone.rs  test_new_macro.rs
.circleci/: COMPLETION_SUMMARY.md  COVERALLS_SETUP.zh_CN.md  QUICKSTART.zh_CN.md  README.md  README.zh_CN.md  README_GENERIC.md  SETUP.md  SETUP.zh_CN.md  config.yml
doc/: consumer_design.md  consumer_design.zh_CN.md  consumers-refactoring-summary.md  crate_design.zh_CN.md  mapper_design.zh_CN.md  mutating_function_design.zh_CN.md  mutator_design.md  mutator_design.zh_CN.md  predicate_design.md  predicate_design.zh_CN.md  supplier_design.md  supplier_design.zh_CN.md  tester_design.md  tester_design.zh_CN.md  transformer_design.md  transformer_design.zh_CN.md
examples/comparator/: comparator_demo.rs
examples/consumers/: bi_consumer_demo.rs  bi_consumer_observation_demo.rs  bi_consumer_once_demo.rs  consumer_demo.rs  consumer_fn_usage.rs  consumer_once_demo.rs  readonly_bi_consumer_demo.rs
examples/functions/: function_family_demo.rs
examples/mutators/: mutator_demo.rs  mutator_once_conditional_demo.rs  mutator_once_demo.rs
examples/predicates/: always_bi_predicate_demo.rs  always_predicate_demo.rs  predicate_demo.rs  predicate_fn_mut_demo.rs  predicate_set_name_demo.rs
examples/suppliers/: closure_supplier_ops_demo.rs  stateful_supplier_demo.rs
examples/tasks/: task_demo.rs
examples/tester/: tester_demo.rs
examples/transformers/: bi_transformer_and_then_demo.rs  bi_transformer_demo.rs  bi_transformer_once_and_then_demo.rs  bi_transformer_once_demo.rs  fn_bi_transformer_ops_demo.rs  fn_transformer_once_ops_demo.rs  fn_transformer_ops_demo.rs  stateful_transformer_demo.rs  transformer_blanket_impl_demo.rs  transformer_demo.rs  transformer_once_blanket_impl_demo.rs  transformer_once_demo.rs  transformer_once_specialized_methods_demo.rs
src/: comparator.rs  lib.rs  macros.rs  tester.rs
src/comparator/: arc_comparator.rs  box_comparator.rs  fn_comparator_ops.rs  rc_comparator.rs
src/consumers/: bi_consumer.rs  bi_consumer_once.rs  consumer.rs  consumer_once.rs  mod.rs  stateful_bi_consumer.rs  stateful_consumer.rs
src/functions/: bi_function.rs  bi_function_once.rs  bi_mutating_function.rs  bi_mutating_function_once.rs  function.rs  function_once.rs  mod.rs  mutating_function.rs  mutating_function_once.rs  stateful_function.rs  stateful_mutating_function.rs
src/macros/: arc_conversions.rs  box_conversions.rs  closure_once_trait.rs  closure_trait.rs  common_name_methods.rs  common_new_methods.rs  mod.rs  rc_conversions.rs
src/mutators/: mod.rs  mutator.rs  mutator_once.rs  stateful_mutator.rs
src/predicates/: bi_predicate.rs  mod.rs  predicate.rs
src/suppliers/: mod.rs  stateful_supplier.rs  supplier.rs  supplier_once.rs
src/tasks/: callable.rs  callable_once.rs  callable_with.rs  mod.rs  runnable.rs  runnable_once.rs  runnable_with.rs
src/tester/: arc_tester.rs  box_tester.rs  fn_tester_ops.rs  rc_tester.rs
src/transformers/: bi_transformer.rs  bi_transformer_once.rs  mod.rs  stateful_bi_transformer.rs  stateful_transformer.rs  transformer.rs  transformer_once.rs
tests/: arc_bi_consumer_tests.rs  arc_bi_function_tests.rs  arc_bi_mutating_function_tests.rs  arc_bi_predicate_tests.rs  arc_bi_transformer_tests.rs  arc_callable_tests.rs  arc_callable_with_tests.rs  arc_comparator_tests.rs  arc_conditional_bi_consumer_tests.rs  arc_conditional_bi_function_tests.rs  arc_conditional_bi_mutating_function_tests.rs  arc_conditional_bi_transformer_tests.rs  arc_conditional_consumer_tests.rs  arc_conditional_function_tests.rs  arc_conditional_mutating_function_tests.rs  arc_conditional_mutator_tests.rs  arc_conditional_stateful_bi_consumer_tests.rs  arc_conditional_stateful_bi_transformer_tests.rs  arc_conditional_stateful_consumer_tests.rs  arc_conditional_stateful_function_tests.rs  arc_conditional_stateful_mutating_function_tests.rs  arc_conditional_stateful_mutator_tests.rs  arc_conditional_stateful_transformer_tests.rs  arc_conditional_transformer_tests.rs  arc_consumer_tests.rs  arc_conversions_tests.rs  arc_function_tests.rs  arc_mutating_function_tests.rs  arc_mutator_tests.rs  arc_predicate_tests.rs  arc_runnable_tests.rs  arc_runnable_with_tests.rs  arc_stateful_bi_consumer_tests.rs  arc_stateful_bi_transformer_tests.rs  arc_stateful_consumer_tests.rs  arc_stateful_function_tests.rs  arc_stateful_mutating_function_tests.rs  arc_stateful_mutator_tests.rs  arc_stateful_supplier_tests.rs  arc_stateful_transformer_tests.rs  (+201 more)
tests/consumers/: bi_consumer_once_tests.rs  bi_consumer_tests.rs  consumer_once_tests.rs  consumer_tests.rs  mod.rs  readonly_bi_consumer_tests.rs  readonly_consumer_tests.rs  stateful_bi_consumer_tests.rs  stateful_consumer_tests.rs
tests/functions/: bi_function_once_tests.rs  bi_function_tests.rs  bi_mutating_function_once_tests.rs  bi_mutating_function_tests.rs  function_once_tests.rs  function_tests.rs  mod.rs  mutating_function_once_tests.rs  mutating_function_tests.rs  stateful_function_tests.rs  stateful_mutating_function_tests.rs
tests/mutators/: mod.rs  mutator_once_tests.rs  mutator_tests.rs  stateful_mutator_tests.rs
tests/predicates/: bi_predicate_tests.rs  (+2 more)
(+295 files in other folders)
